src/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
	--foreground-rgb: 0, 0, 0;
	--background-start-rgb: 214, 219, 220;
	--background-end-rgb: 255, 255, 255;
}

@media (prefers-color-scheme: dark) {
	:root {
		--foreground-rgb: 255, 255, 255;
		--background-start-rgb: 0, 0, 0;
		--background-end-rgb: 0, 0, 0;
	}
}
@layer base {
	input,
	textarea {
		@apply tw-border tw-border-gray-300 tw-rounded-md tw-p-1 tw-text-xs;
	}
	h2 {
		@apply tw-text-3xl tw-font-medium;
	}
	label {
		@apply tw-text-sm;
	}
	code {
		@apply tw-bg-slate-700 tw-py-0.5 tw-px-1 tw-mx-1 tw-rounded-sm tw-font-sans tw-text-white;
	}

	[contentEditable='true'] {
		@apply tw-outline-none focus:tw-ring-2 focus:tw-ring-blue-500 empty:tw-min-w-12 empty:tw-ring-2 empty:tw-ring-yellow-300;
	}
}

#panel-top {
	@apply tw-bg-gradient-to-r tw-from-gray-200 tw-to-gray-300 tw-h-48 tw-w-full;
}
@layer utilities {
	.text-balance {
		text-wrap: balance;
	}
}
/* TODO: Remove these when they go live */
.gwp-pdp-slider--reverse .gwp-pdp-slider__banner {
	display: grid;
	grid-template-columns: 1fr 145px;
}

.gwp-pdp-slider--reverse .gwp-pdp-slider__img {
	width: unset;
	height: unset;
}
.gwp-pdp-slider--reverse .gwp-pdp-slider__img img {
	height: 100%;
	object-fit: cover;
}

@media (min-width: 810px) {
	.gwp-pdp-slider--reverse .gwp-pdp-slider__badge {
		margin-left: 0.5rem;
	}
	.gwp-pdp-slider--reverse .gwp-pdp-slider__banner {
		grid-template-columns: 1fr 175px;
	}
}

